--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "fast-csv": "^5.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "prisma": "^6.0.0"
   }
