--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "npx tsx app.ts",
+    "dev": "nodemon npx tsx app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chen Zhao",
@@ -19,6 +19,16 @@
     "fast-csv": "^5.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
-    "prisma": "^6.0.0"
+    "prisma": "^6.0.0",
+    "stream": "^0.0.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.10.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
   }
 }
