--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "npx tsx app.ts",
-    "dev": "nodemon npx tsx app.ts",
+    "dev": "nodemon --exec npx tsx app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chen Zhao",
