--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@prisma/client": "^6.0.0",
     "body-parser": "^1.20.3",
+    "bullmq": "^5.30.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "fast-csv": "^5.0.2",
+    "ioredis": "^5.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "prisma": "^6.0.0",
-    "stream": "^0.0.3"
+    "stream": "^0.0.3",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
