--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npx tsx app.ts",
-    "dev": "nodemon --exec npx tsx app.ts",
+    "start":"nodemon --exec npx tsx app.ts",
+    "dev": "npx tsx app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chen Zhao",
